--- a/module/execution/css/grouptask.ui.css
+++ b/module/execution/css/grouptask.ui.css
@@ -1,3 +1,4 @@
+.feature-actions {width: 205px}
 .group-menu {padding: 1px 5px !important;}
 .group-menu .btn {font-size: 14px; color: #3C4353;}
 .icon-caret-right.text-muted {color: #CBD0DB;}
