--- a/module/project/css/view.ui.css
+++ b/module/project/css/view.ui.css
@@ -4,6 +4,8 @@
 .chart > div {margin: auto;}
 .pie-chart {position: relative;}
 .pie-chart .pie-chart-title {position: absolute; top: 50%; left: 50%; margin-top: -20px; margin-left: -16px}
-.m-project-view #mainContent {display: flex; align-items: flex-start;}
+.m-project-view #mainContent {display: flex;}
+.m-project-view #mainContent .main {flex: 1 0 65%;}
+.m-project-view #mainContent .side {flex: 1 1 35%; overflow-x: hidden;}
 #dynamicBlock {height: 50vh; display: flex; flex-direction: column; box-shadow: none;}
 #dynamicBlock .panel-body {flex: 1 1 auto; overflow-y: auto;}
