--- a/module/execution/css/view.ui.css
+++ b/module/execution/css/view.ui.css
@@ -3,6 +3,6 @@
 .flex-col {flex-direction: column;}
 .chart > div {margin: auto;}
 .pie-chart {position: relative;}
-.pie-chart .pie-chart-title {position: absolute; top: 50%; left: 50%; margin-top: -20px; margin-left: -16px}
+.pie-chart .pie-chart-title {position: relative; top: -60%; left: 2%; height: 1rem;}
 
 .member-list > .center-y {width: 12.5%}
