--- a/module/project/css/view.ui.css
+++ b/module/project/css/view.ui.css
@@ -5,7 +5,7 @@
 .pie-chart {position: relative;}
 .pie-chart .pie-chart-title {position: relative; top: -60%; left: 2%; height: 1rem;}
 .m-project-view #mainContent {display: flex; margin-bottom: 60px;}
-.m-project-view #mainContent .main {flex: 1 0 65%;}
+.m-project-view #mainContent .main {flex: 1 0 65%; overflow-x: hidden;}
 .m-project-view #mainContent .side {flex: 1 1 35%; overflow: hidden;}
 #dynamicBlock {display: flex; flex-direction: column; box-shadow: none;}
 #dynamicBlock .panel-body {flex: 1 1 auto; overflow-y: auto;}
