--- a/lib/zin/wg/dynamic/css/v1.css
+++ b/lib/zin/wg/dynamic/css/v1.css
@@ -6,7 +6,7 @@
 .dynamic > li.green > div:after {background-color: rgb(25, 190, 131);}
 .dynamic > li.yellow > div:after {background-color: rgb(255, 210, 169);}
 .dynamic > li.trophy > div:after {background-color: unset;}
-.dynamic > li:after {position: absolute; top: 12px; bottom: -13px; left: -13px; z-index: 1; display: block; content: ' '; border-left: 2px solid #eee;}
+.dynamic > li + li:after {position: absolute; top: -12px; bottom: 20px; left: -13px; z-index: 1; display: block; content: ' '; border-left: 2px solid #eee;}
 .dynamic > li > div:after {opacity: 1}
 .dynamic > li:before {top: 12px; left: -20px; width: 16px; height: 16px; background-color: var(--color-slate-100); border: none;}
 .dynamic > li.trophy:before {background: url('static/svg/trophy.svg') no-repeat; width: 18px; height: 18px; background-size: 100%; left: -21px; top: 13px; background-color: var(--color-slate-100);}
