--- a/lib/zin/wg/stepseditor/css/v1.css
+++ b/lib/zin/wg/stepseditor/css/v1.css
@@ -18,6 +18,6 @@
 .steps-editor-body .steps-editor-col-add > div + div::before {content: ' '; position: absolute; display: block; border-left: 1px solid var(--color-border-strong); top: 4px; bottom: 4px; left: 0; opacity: .7;}
 .steps-editor .btn-action {color: var(--color-slate-600);}
 .steps-editor .btn-action:hover {color: var(--color-primary-500);}
-.steps-editor-col-delete {width: 24px; height: 32px; display: flex; align-items: center; justify-content: center; position: absolute; right: -24px; top: 0}
+.steps-editor-col-delete {width: 24px; height: 100%; display: flex; align-items: center; justify-content: center; position: absolute; right: -24px; top: 0}
 .steps-editor-row[data-level="1"] {margin-top: 7px;}
 .steps-editor-body > .steps-editor-row:first-child {margin-top: 1px;}
