* Adjust devops three level menu

--- a/module/ops/css/common.ui.css
+++ b/module/ops/css/common.ui.css
@@ -6,3 +6,9 @@
 .osOpsList>a.active {color: #2e7fff; background-color: #e6f0ff;}
 .osOpsList>a.active:hover, .osOpsList>a:hover {color: #fff; background-color: #2e7fff;}
 .ops-ml-0 {margin-left: 0!important;}
+
+#mainNavbar .nav {justify-content: left;}
+#mainNavbar {background: none;}
+#mainNavbar .nav-item>a {padding-right: 0.5rem}
+#mainNavbar .nav-item>.active {color: unset; font-weight: 700;}
+#mainNavbar .nav-item>a.active:after {position: absolute; content: ''; border-bottom: 2px solid #2e7fff; inset: 0 6px 0 15px;}
