--- a/module/host/css/common.ui.css
+++ b/module/host/css/common.ui.css
@@ -1,2 +1,8 @@
 #status {flex-direction: row;}
 #hostCreateForm .form-row:last-child {width: 66%;}
+
+#mainNavbar .nav {justify-content: left;}
+#mainNavbar {background: none;}
+#mainNavbar .nav-item>a {padding-right: 0.5rem}
+#mainNavbar .nav-item>.active {color: unset; font-weight: 700;}
+#mainNavbar .nav-item>a.active:after {position: absolute; content: ''; border-bottom: 2px solid #2e7fff; inset: 0 6px 0 15px;}
