--- a/module/serverroom/css/common.ui.css
+++ b/module/serverroom/css/common.ui.css
@@ -1,1 +1,7 @@
 #serverroomCreateForm .form-row {width: 600px;}
+
+#mainNavbar .nav {justify-content: left;}
+#mainNavbar {background: none;}
+#mainNavbar .nav-item>a {padding-right: 0.5rem}
+#mainNavbar .nav-item>.active {color: unset; font-weight: 700;}
+#mainNavbar .nav-item>a.active:after {position: absolute; content: ''; border-bottom: 2px solid #2e7fff; inset: 0 6px 0 15px;}
