--- a/module/repo/css/ajaxgeteditorcontent.ui.css
+++ b/module/repo/css/ajaxgeteditorcontent.ui.css
@@ -23,7 +23,7 @@
 #relationTabs .nav-tabs > li > .unlinks:hover {text-decoration: underline;color: #C61A1A;}
 #relationTabs .nav-tabs > li > .unlinks > i {background: none;padding: 0;}
 #relationTabs .nav-tabs>.nav-item>a.active:after{border: none;}
-#relationTabs .tab-content{margin-top: 40px;}
+#relationTabs .tab-content{margin-top: 30px;}
 #related .content, #related .btn {background-color: #F4F5F7; border: none;}
 #related .btn.pull-right {margin-right: 0;z-index: 1;}
 #related .btn.pull-left {z-index: 1;}
@@ -37,3 +37,4 @@
 #codeContainer{height: 100%;}
 #related .nav-item {gap: 0;}
 .nav-tabs>li>a.active {font-weight: 700;color: #313c52!important}
+#relationTabs .tab-content{overflow: auto;}
