--- a/module/host/css/treemap.css
+++ b/module/host/css/treemap.css
@@ -1,3 +1,2 @@
 #hostsTreemap {white-space: nowrap;}
-.m-host-treemap #subHeader .container {background: white; margin-bottom: 12px;}
-.m-host-treemap #subHeader .container #subNavbar {text-align: center;}
+#mainMenu {padding-bottom: .75rem; padding-top: .75rem;}
