--- a/module/execution/css/all.css
+++ b/module/execution/css/all.css
@@ -1,12 +1,12 @@
 #main {padding-bottom: 0;}
-#myTable .dtable-header, #executionsForm .dtable-rows {z-index: 4;}
+#dtable .dtable-header, #executionsForm .dtable-rows {z-index: 4;}
 .table-header.fixed-right > .btn-toolbar {right: 0; background-color: #f1f5f9;}
 
-#myTable input[type=checkbox] {margin: 0px}
+#dtable input[type=checkbox] {margin: 0px}
 
 .table-footer {border-top: 1px solid #fff4ea}
 .table-footer .pager{z-index: 10}
-#myTable .scrollbar {z-index: 11}
+#dtable .scrollbar {z-index: 11}
 
 .dtable {--dtable-checked-bg: #fff4ea; --dtable-border-color: #f4f5f7}
 .dtable-row {border-bottom-style: solid;}
