* Code for project::edit program tips.

--- a/module/project/css/common.ui.css
+++ b/module/project/css/common.ui.css
@@ -6,3 +6,5 @@
 
 #project-model {font-weight: 500; font-size: 14px;}
 .items-center {align-items: center !important}
+
+.programTip {width: 200px !important;}
