--- a/module/repo/css/common.ui.css
+++ b/module/repo/css/common.ui.css
@@ -51,3 +51,4 @@
 #log .action-btn .caret {display: none;}
 #fileTabs .monaco-dropmenu .caret {display: none;}
 #monacoTabs .gap-x-5 {-moz-column-gap: 0; column-gap: 0;}
+#reviewBugContainer {position: fixed; right: 0; top: 0px; width: 25%; height: 100%; background: #fff; border-left: 5px solid #F4F5F7; overflow-y: auto; z-index: 9;}
