--- a/module/host/css/common.ui.css
+++ b/module/host/css/common.ui.css
@@ -1,7 +1,8 @@
 #status {flex-direction: row;}
 #hostCreateForm .form-row:last-child {width: 66%;}
 
-#mainNavbar .nav {justify-content: left;}
+#mainNavbar>.container {padding-top: 8px}
+#mainNavbar .nav {justify-content: left; position: relative; left: -12px; top: -4px;}
 #mainNavbar {background: none;}
 #mainNavbar .nav-item>a {padding-right: 0.5rem}
 #mainNavbar .nav-item>.active {color: unset; font-weight: 700;}
