--- a/module/product/css/browse.css
+++ b/module/product/css/browse.css
@@ -17,16 +17,6 @@
 a.removeModule {color: #ddd;}
 a.removeModule:hover {color: red;}
 
-.table-children {border-left: 2px solid #cbd0db; border-right: 2px solid #cbd0db;}
-.table tbody > tr.table-children.table-child-top {border-top: 2px solid #cbd0db;}
-.table tbody > tr.table-children.table-child-bottom {border-bottom: 2px solid #cbd0db;}
-.table td.has-child > a:not(.story-toggle) {max-width: 90%; max-width: calc(100% - 50px); display: inline-block; overflow: hidden; text-overflow: clip; white-space: nowrap;}
-.table td.has-child > .story-toggle {color: #838a9d; position: relative; top: 1px; left: 2px;}
-.table td.has-child > .story-toggle:hover {color: #006af1; cursor: pointer;}
-.table td.has-child > .story-toggle > .icon {font-size: 16px; display: inline-block; transition: transform .2s; -ms-transform: rotate(-90deg); -moz-transform: rotate(-90deg); -o-transform: rotate(-90deg); -webkit-transform: rotate(-90deg); transform: rotate(-90deg);}
-.table td.has-child > .story-toggle > .icon:before {text-align: left;}
-.table td.has-child > .story-toggle.collapsed > .icon {-ms-transform: rotate(90deg); -moz-transform: rotate(90deg); -o-transform: rotate(90deg); -webkit-transform: rotate(90deg); transform: rotate(90deg);}
-.table td.c-estimate {padding-right: 12px;}
 .main-table tbody > tr.table-children > td:first-child::before {width: 3px;}
 .table-footer {z-index: 1;}
 @-moz-document url-prefix() {.main-table tbody > tr.table-children > td:first-child::before {width: 4px;};}
@@ -42,3 +32,5 @@ a.removeModule:hover {color: red;}
 .c-span {margin-left: 19px;}
 .btn-toolbar #query span.text{overflow: hidden; width: 52px; vertical-align: middle; margin-right: 1px;}
 #linkStoryByPlan .modal-header {padding: 20px 0 10px 0; border-bottom: 0px}
+
+.dtable-cell[data-col="actions"] > .dtable-cell-content .c-actions .dividing-line {width: 1px; height: 16px; display: inline-block; vertical-align: middle; background: #F4F5F7; margin: 0 4px 0 0;}
