--- a/module/product/css/browse.css
+++ b/module/product/css/browse.css
@@ -18,7 +18,6 @@ a.removeModule {color: #ddd;}
 a.removeModule:hover {color: red;}
 
 .main-table tbody > tr.table-children > td:first-child::before {width: 3px;}
-.table-footer {z-index: 1;}
 @-moz-document url-prefix() {.main-table tbody > tr.table-children > td:first-child::before {width: 4px;};}
 
 #batchUnlinkStoryTip .modal-body {padding-top: 10px; max-height: 400px; overflow: auto;}
@@ -34,3 +33,5 @@ a.removeModule:hover {color: red;}
 #linkStoryByPlan .modal-header {padding: 20px 0 10px 0; border-bottom: 0px}
 
 .dtable-cell[data-col="actions"] > .dtable-cell-content .c-actions .dividing-line {width: 1px; height: 16px; display: inline-block; vertical-align: middle; background: #F4F5F7; margin: 0 4px 0 0;}
+.table-footer{z-index: 10}
+#dtable .scrollbar, .table-header.fixed-right {z-index: 11}
