--- a/module/execution/css/task.css
+++ b/module/execution/css/task.css
@@ -22,3 +22,4 @@ body {margin-bottom: 25px; overflow: hidden;}
 .dtable-nested-toggle.is-no-child, .dtable-nested-indent, .dtable-cell-html .icon-angle-double-right {display: none;}
 
 .dtable-row.is-normal .dtable-cell[data-col="name"] {padding-left: 20px;}
+.dtable-cell[data-col="actions"] > .dtable-cell-content .c-actions .dividing-line {width: 1px; height: 16px; display: inline-block; vertical-align: middle; background: #F4F5F7; margin: 0 4px 0 0;}
