--- a/module/execution/css/task.css
+++ b/module/execution/css/task.css
@@ -1,4 +1,4 @@
-body {margin-bottom: 25px; overflow: hidden;}
+body {margin-bottom: 10px;}
 .btn-group a.btn-primary {border-right: 1px solid rgba(255,255,255,0.2);}
 .btn-group button.dropdown-toggle.btn-primary {padding:6px;}
 
