--- a/module/serverroom/css/common.ui.css
+++ b/module/serverroom/css/common.ui.css
@@ -1,7 +1,8 @@
 #serverroomCreateForm .form-row {width: 600px;}
 
 #mainNavbar>.container {padding-top: 8px}
-#mainNavbar .nav {justify-content: left; position: relative; left: -12px; top: -4px;}
+#mainNavbar .nav {justify-content: left; position: relative; left: 0px; top: -4px;}
+@media (min-width: 1400px){#mainNavbar .nav {left: -12px;}}
 #mainNavbar {background: none;}
 #mainNavbar .nav-item>a {padding-right: 0.5rem}
 #mainNavbar .nav-item>.active {color: unset; font-weight: 700;}
