--- a/module/product/css/browse.css
+++ b/module/product/css/browse.css
@@ -43,6 +43,7 @@ a.removeModule:hover {color: red;}
 #dtable .scrollbar, .table-header.fixed-right {z-index: 11}
 
 #heading .btn-group {display: inline-block !important;}
+#mainMenu .btn-group {gap: 0px;}
 .btn-group .icon-close:before {font-size: 5px; vertical-align: 25%;}
 .btn-group a.btn-secondary, .btn-group a.btn-primary {border-right: 1px solid rgba(255,255,255,0.2);}
 .btn-group button.dropdown-toggle.btn-secondary, .btn-group button.dropdown-toggle.btn-primary {padding:6px;}
