--- a/module/execution/css/task.css
+++ b/module/execution/css/task.css
@@ -1,4 +1,6 @@
 body {margin-bottom: 10px;}
+#heading .btn-group {display: inline-block !important;}
+#mainMenu .btn-group {gap: 0px;}
 .btn-group a.btn-primary {border-right: 1px solid rgba(255,255,255,0.2);}
 .btn-group button.dropdown-toggle.btn-primary {padding:6px;}
 
