--- a/module/bug/css/browse.css
+++ b/module/bug/css/browse.css
@@ -1,4 +1,3 @@
-.table-footer {z-index: 1;}
 .closed, .closed a {color: gray; text-decoration:line-through;}
 .resolved, .resolved a {color: #8EC21F; text-decoration: none;}
 .tree .closed, .tree .closed a {color: #003366; text-decoration: none;}
@@ -33,3 +32,31 @@ body {margin-bottom: 25px;}
 .btn-group button.dropdown-toggle.btn-primary {padding:6px;}
 #bugForm tbody tr td .label {max-width: 100px; text-overflow: unset;}
 [lang^='de'] th.c-confirmed {width: 100px !important;}
+
+body {margin-bottom: 10px;}
+#heading .btn-group {display: inline-block !important;}
+#mainMenu .btn-group {gap: 0px;}
+.btn-group a.btn-primary {border-right: 1px solid rgba(255,255,255,0.2);}
+.btn-group button.dropdown-toggle.btn-primary {padding:6px;}
+
+#main {padding-bottom: 0;}
+#heading {display: flex;}
+#dtable .dtable-header, #bugForm .dtable-rows {z-index: 4;}
+.table-header.fixed-right > .btn-toolbar {right: 0; background-color: #f1f5f9;}
+
+#dtable input[type=checkbox] {margin: 0px}
+
+.table-footer {border-top: 1px solid #fff4ea; padding-left: 12px;}
+.table-footer .pager{z-index: 10}
+#dtable .scrollbar, .table-header.fixed-right {z-index: 11}
+
+.dtable {--dtable-checked-bg: #fff4ea; --dtable-border-color: #f4f5f7}
+.dtable-row {border-bottom-style: solid;}
+.dtable-cell-html a{color: #2463c7}
+.dtable-cell[data-sort='up']   .dtable-sort:before {color: #000; opacity: 1}
+.dtable-cell[data-sort='down'] .dtable-sort:after  {color: #000; opacity: 1}
+.dtable .toggle-icon {border-radius: 50%; border-style: solid;}
+.dtable-nested-toggle.is-no-child, .dtable-nested-indent, .dtable-cell-html .icon-angle-double-right {display: none;}
+
+.dtable-row.is-normal .dtable-cell[data-col="name"] {padding-left: 20px;}
+.dtable-cell[data-col="actions"] > .dtable-cell-content .c-actions .dividing-line {width: 1px; height: 16px; display: inline-block; vertical-align: middle; background: #F4F5F7; margin: 0 4px 0 0;}
