--- a/module/misc/css/features.css
+++ b/module/misc/css/features.css
@@ -8,9 +8,9 @@
 #featuresNav > li.active > a:hover {background-color: #f1f1f1; opacity: 1;}
 
 #featuresCarousel .carousel-indicators {bottom: -10px;}
-#featuresCarousel .carousel-indicators li {border-color: #FFFFFF; background-color: rgba(255,255,255,0.5); width: 12px; height: 12px;}
+#featuresCarousel .carousel-indicators li {border-width: 0; background-color: #fff; width: 12px; height: 12px;}
 #featuresCarousel .carousel-indicators li + li {margin-left: 10px !important;}
-#featuresCarousel .carousel-indicators .active {border-color: #FFFFFF; background-color: #FFFFFF; margin: 1px;}
+#featuresCarousel .carousel-indicators .active {background-color: #D5E5FF; margin: 1px;}
 #featuresCarousel .carousel-inner .download-file {position: absolute; right: 115px; bottom: 0; font-size: 12px;}
 
 #features [data-slide-to] {pointer-events: none;}
