* Fixed the cumulative flow graph.

--- a/module/execution/css/cfd.ui.css
+++ b/module/execution/css/cfd.ui.css
@@ -1,3 +1,4 @@
 #featureBar .nav .btn > .icon {color: #FFFFFF;}
 .cfd-help {margin-left: -0.75rem;}
 .table-empty-tip {line-height: 200px;}
+#featureBar .type-selecter > .picker-box {width: 150px;}
