--- a/module/product/css/browse.css
+++ b/module/product/css/browse.css
@@ -50,3 +50,4 @@ a.removeModule:hover {color: red;}
 
 .dtable-cell[data-sort='up']   .dtable-sort:before {color: #000; opacity: 1}
 .dtable-cell[data-sort='down'] .dtable-sort:after  {color: #000; opacity: 1}
+.dtable .toggle-icon {border-radius: 50%; border-style: solid;}
