--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -1,6 +1,8 @@
 #mainContent {display: flex;}
-#mainContent .side {flex: 1 0 25%;overflow-x: hidden;padding-right: 2px;}
-#mainContent .main {flex: 1 0 75%;overflow-x: hidden;}
+#mainContent .side {flex: 1 0 25%; overflow-x: hidden; padding-right: 2px;}
+#mainContent .main {flex: 1 0 75%; overflow-x: hidden;}
 
-.side .metric-name {height: 48px; padding-left: 16px;}
+.side .metric-name {height: 48px; padding-left: 16px; margin-bottom: 8px}
 .side .name-color {color: #475569;}
+.side .metric-list {padding-left: 24px;  height: calc(100vh - 200px); overflow-y: scroll;}
+.side .metric-item {padding-bottom: 12px;}
