* Add color for current metric.

--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -6,3 +6,4 @@
 .side .name-color {color: #475569;}
 .side .metric-list {padding-left: 24px;  height: calc(100vh - 200px); overflow-y: scroll;}
 .side .metric-item {padding-bottom: 12px;}
+.side .metric-current {color: var(--nav-active-color);}
