* Add metric title at main side.

--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -2,8 +2,11 @@
 #mainContent .side {flex: 1 0 33%; overflow-x: hidden; padding-right: 2px;}
 #mainContent .main {flex: 1 0 67%; overflow-x: hidden;}
 
-.side .metric-name {height: 48px; padding-left: 16px; margin-bottom: 8px}
+.side .title {height: 48px; padding-left: 16px; margin-bottom: 8px;}
 .side .name-color {color: #475569;}
-.side .metric-list {padding-left: 24px;  height: calc(100vh - 200px); overflow-y: scroll;}
+.side .metric-tree {padding-left: 24px;  height: calc(100vh - 200px); overflow-y: scroll;}
 .side .metric-item {padding-bottom: 12px;}
 .side .metric-current {color: var(--nav-active-color);}
+
+.main .metric-name {height: 48px; padding-left: 16px;}
+.main .metric-name-weight {font-weight: 600; font-size: 0.9rem;}
