--- a/module/metric/css/browse.ui.css
+++ b/module/metric/css/browse.ui.css
@@ -9,3 +9,5 @@
 .scope-menu > .is-caret:hover {color: var(--color-primary-500); background: var(--color-primary-100);}
 .scope-menu > .is-caret > .caret {display: none;}
 .scope-menu > .is-caret::after {content: '\e936'; font-family: ZentaoIcon;}
+
+.btn-divider {background-color: var(--color-current);height: 1rem;margin-left: 0.5rem;margin-right: 0.5rem;opacity: .3;width: 1px;}
