--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -2,11 +2,19 @@
 #mainContent .side {flex: 1 0 33%; overflow-x: hidden; padding-right: 2px;}
 #mainContent .main {flex: 1 0 67%; overflow-x: hidden;}
 
+#featureBar .nav-feature li:last-child {padding-left: 4px; position: relative;}
+#featureBar .nav-feature li:last-child:before {content: ""; position: absolute; left: 2px; top: 5px; right: 0; bottom: 5px; width: 1px; background-color: var(--color-slate-300);}
+
 .side .title {height: 48px; padding-left: 16px; margin-bottom: 8px;}
-.side .name-color {color: #475569;}
+.side .name-color {color: var(--color-slate-600);}
 .side .metric-tree {padding-left: 24px;  height: calc(100vh - 200px); overflow-y: scroll;}
 .side .metric-item {padding-bottom: 12px;}
 .side .metric-current {color: var(--nav-active-color);}
 
-.main .metric-name {height: 48px; padding-left: 16px;}
+.main .metric-name {height: 48px; padding-left: 16px; border-bottom: 1px solid var(--color-slate-300);}
+.main .flex-between {justify-content: space-between;}
+.main .flex-start {justify-content: flex-start;}
 .main .metric-name-weight {font-weight: 600; font-size: 0.9rem;}
+.main .details {position: relative; margin-right: 4px;}
+.main .details:after {content: ""; position: absolute; top: 5px; right: -2px; bottom: 5px; width: 1px; background-color: var(--color-slate-300);}
+.main .chart-line-margin {margin-right: 16px;}
