--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -31,3 +31,7 @@
 .icon-18 {font-size: 18px;}
 .primary-hover-500 {color: var(--color-slate-800)}
 .primary-hover-500:hover {color: var(--color-primary-500);}
+
+.main .checked-content {height: 48px; padding-left: 16px; margin-bottom: 8px; border-bottom: 1px solid var(--color-slate-300);}
+.main .checked-label-content {height: 48px; display: flex; gap: 5px;}
+.main .checked-tip {line-height: 48px; height: 100%; padding-right: 32px;}
