--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -33,5 +33,8 @@
 .primary-hover-500:hover {color: var(--color-primary-500);}
 
 .main .checked-content {height: 48px; padding-left: 16px; margin-bottom: 8px; border-bottom: 1px solid var(--color-slate-300);}
-.main .checked-label-content {height: 48px; display: flex; gap: 5px;}
+.main .checked-label-content {height: 48px; padding-top: 5px; padding-bottom: 7px; display: flex; flex-wrap: wrap;}
 .main .checked-tip {line-height: 48px; height: 100%; padding-right: 32px;}
+.main .gray-pale {margin: 7px 5px; padding: 12px 10px; white-space: nowrap;}
+.main .gray-pale-div {overflow: hidden;}
+.main .gray-pale-withdelete {padding-right: 5px;}
