* Refactor bug method and page.

--- a/module/execution/css/testcase.ui.css
+++ b/module/execution/css/testcase.ui.css
@@ -1,1 +1,1 @@
-.m-execution-testcase #mainMenu #productMenu .icon-angle-right {display: none;}
+.m-execution-testcase #mainMenu #productMenu .icon-angle-right:before {display: none;}
