--- a/module/repo/css/ajaxgeteditorcontent.ui.css
+++ b/module/repo/css/ajaxgeteditorcontent.ui.css
@@ -38,7 +38,7 @@
 #related .nav-item {gap: 0;}
 .nav-tabs>li>a.active {font-weight: 700;color: #313c52!important}
 #relationTabs .tab-content{overflow: auto;}
-.repoCode .view-line-icon {position: absolute; right: 50px; top: 2px; font-weight: bold; cursor: pointer;}
+.repoCode .view-line-icon {position: absolute; right: 50px; top: 2px; font-weight: bold; cursor: pointer;background-color: white;}
 .repoCode .view-line-icon.add-bug {left: 5px;}
 .repoCode .view-line-icon.add-bug .icon {font-weight: bold;}
 .repoCode .view-line-icon .bug-count {vertical-align: middle; padding-left: 5px;}
