--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -23,8 +23,11 @@
 .main .details {position: relative; margin-right: 4px;}
 .main .details:after {content: ""; position: absolute; top: 5px; right: -2px; bottom: 5px; width: 1px; background-color: var(--color-slate-300);}
 .main .chart-line-margin {margin-right: 16px;}
-.main .table-and-chart {height: calc(100vh - 180px); display: flex;}
-.main .table-and-chart-multiple {height: calc(100vh - 180px - 48px);}
+.main .table-and-chart {display: flex;}
+.main .table-and-chart-single {height: calc(100vh - 180px);}
+.main .table-and-chart-multiple {height: calc(100% - 56px);}
+.main .table-and-charts {height: calc(100vh - 172px); overflow-y: scroll;}
+.main .metricBox {height: 80%;}
 
 .table-and-chart .table-side {flex: 0 0 40%; overflow-x: hidden; padding-left: 16px; padding-top: 8px; padding-bottom: 16px; padding-right: 2px;}
 .table-and-chart .chart-side {flex: 0 0 60%;}
